--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-bootstrap": "^2.10.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
