--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "pdfjs-dist": "^4.0.379",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.3.1",
